# PandaCode

./: .gitignore  README.md  ai_service.py  app.py  file_service.py  git_service.py  main_window.ui  models.py  pyproject.toml  settings_dialog.ui  terminal_service.py
PandaCode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
